--- a/Frontend/Meetups.Frontend.BlazorUI/wwwroot/global.css
+++ b/Frontend/Meetups.Frontend.BlazorUI/wwwroot/global.css
@@ -1,14 +1,18 @@
-﻿#blazor-error-ui {    
+﻿#content {
+    height: 100vh;
+}
+
+#blazor-error-ui {
     display: none;
-    
+
     background: lightcoral;
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
-    
+
     bottom: 0;
     left: 0;
     position: fixed;
     z-index: 1000;
-    
+
     width: 100%;
     padding: 0.75rem 1.25rem;
     box-sizing: border-box;
